<resources>
    <string name="app_name">Sata Vendor</string>
    <string name="confirm">قبول</string>
    <string name="cancel">رفض</string>
    <string name="cancel2">تم رفض الطلب</string>
    <string name="cancel3">الغاء</string>
    <string name="name">الاسم </string>
    <string name="address">مساكن شيراتون الحي الثامن مدينة نصر</string>
    <string name="details">تفاصيل الطلب</string>
    <string name="report">ابلاغ عن مشكلة</string>
    <string name="delivery">تسليم</string>
    <string name="done">تم التحضير</string>
    <string name="price">239 ج.م</string>
    <string name="طلباتي">طلباتي</string>
    <string name="quantity">الكمية المطلوبة</string>
    <string name="orderDetails">تفاصيل الطلب رقم </string>
    <string name="archive">أرشيف الطلبات</string>
    <string name="orderNumberText"> رقم الطلب : </string>
    <string name="paymentWayText">طريقة الدفع : </string>
    <string name="deliveryTimeText">وقت التسليم : </string>
    <string name="totalText">الإجمالي  : </string>
    <string name="startTime">من</string>
    <string name="endTime">إلي</string>
    <string name="close">اغلاق</string>
    <string name="orderfound">لا يوجد طلبات</string>
    <string name="backToMenu">رجوع</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="currentOrders">طلباتي</string>
    <string name="dailyOrders">طلبات اليوم</string>
    <string name="archiveOrders">أرشيف الطلبات</string>
    <string name="logout">خروج</string>
    <string name="search">بحث</string>
    <string name="login">التسجيل</string>
    <string name="customerName">اسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="success">تم قبول الاوردر تابع في الطلبات الحالية</string>
    <string name="editProfile">تعديل صوره الملف الشخصي</string>
    <string name="phone">الهاتف</string>
    <string name="storeName">اسم المتجر</string>
    <string name="deliveryTotalText"> إجمالي خدمة التوصيل :  </string>
    <string name="required">مطلوب</string>
    <string name="orderPrice">سعر الطلب</string>
    <string name="problem">مشكلة!</string>
    <string name="canceled">مرفوضة</string>
    <string name="go_home">هل تريد الذهاب اللي المطعم ؟</string>
    <string name="timeoutExceeded">Timeout exceeded while waiting for loading, make sure you are connected to the internet</string>
    <string name="errorOccurred">error occurred, please try again</string>
    <string name="select_a_time">أختار وقت</string>
    <string name="currentDeliveries">اختر مندوب</string>
    <string name="floor_number">رقم الطابق</string>
    <string name="flat_number">رقم الشقة</string>
    <string name="order_status">حالة الطلب : </string>
    <string name="payment_method">طريقة الدفع</string>
    <string name="edit">تعديل</string>
    <string name="order_date">تاريخ الطلب</string>
    <string name="delivery_fee"> خدمة التوصيل</string>
    <string name="home_screen">الرئيسية</string>
    <string name="profile">الحساب الشخصي</string>
    <string name="total_without_delivery_fees">الاجمالي بدون خدمة التوصيل</string>
    <string name="splash_image_view">splash image view</string>
    <string name="profile_personal">الملف الشخصي</string>
</resources>