<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <!--    <variable-->
        <!--        name="data"-->
        <!--        type="com.satafood.core.entities.homepage.CitiesModelItem" />-->

        <variable
            name="Context"
            type="com.example.satadelivery.presentation.map_activity.MapActivity" />
        <!--    <variable-->
        <!--        name="listener"-->
        <!--        type="com.example.satafood.presentaion.ClickHandler"/>-->

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/recent_location"
            style="@style/topicTitleTextStyle"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/archive"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/startTime"
            style="@style/topicTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:padding="@dimen/dimen_8"
            android:background="@color/white"
            android:text="@string/startTime"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recent_location" />
    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/endTime"
            style="@style/topicTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:padding="@dimen/dimen_8"
            android:background="@color/white"
            android:text="@string/endTime"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recent_location" />


        <View
            android:id="@+id/guid"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startTime"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dailyOrderRecycle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:itemCount="2"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guid"
            tools:listitem="@layout/history_order_adapter" />
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:padding="@dimen/dimen_8"
    android:background="@color/white"
    >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalText"
            style="@style/topicTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/totalText"
            android:textSize="@dimen/dimen_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/total"
            style="@style/topicTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="1233"
           android:textColor="@color/red2"
            android:textSize="@dimen/dimen_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
