<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
<!--    <variable-->
<!--        name="data"-->
<!--        type="com.satafood.core.entities.homepage.CitiesModelItem" />-->

    <variable
        name="Context"
        type="com.example.satadelivery.presentation.map_activity.MapActivity" />
<!--    <variable-->
<!--        name="listener"-->
<!--        type="com.example.satafood.presentaion.ClickHandler"/>-->

</data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recent_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


<View
    android:id="@+id/guid"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
   app:layout_constraintTop_toBottomOf="@+id/recent_location"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sort_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shadow_back_g"
        app:layout_constraintBottom_toTopOf="@+id/ButtonClick"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
<androidx.cardview.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="24dp"
    android:innerRadius="0dp"
    android:shape="ring"
    android:padding="@dimen/dimen_4"
    app:cardCornerRadius="75dp"
    app:cardElevation="@dimen/dimen_4"
    android:dividerHeight="0.0px"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:background="@drawable/shadowbackground"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/call"
    >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:padding="12dp"
            android:src="@drawable/test"
            android:scaleType="fitXY"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/call"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent.normal"
            app:strokeWidth="0dp" />
</androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/call"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/telephone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sort_recycle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            style="@style/topicTitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/name"
            app:layout_constraintRight_toLeftOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/address"
            style="@style/grayTopicTitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/address"
            app:layout_constraintRight_toLeftOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addressDetails"
            style="@style/grayTopicTitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="@color/red2"
            android:text="@string/address"
            app:layout_constraintRight_toLeftOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/orange_border_shape"
            android:padding="@dimen/dimen_12"
            android:text="@string/details"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintWidth_percent="0.45" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/price"
            style="@style/grayTopicTitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/red2"
            app:layout_constraintBottom_toBottomOf="@+id/details_button"
            app:layout_constraintRight_toRightOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/details_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ButtonClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:layout_margin="@dimen/dimen_4"
            android:textColor="@color/white"
            android:padding="@dimen/dimen_12"
            android:textAlignment="center"
            app:layout_constraintWidth_percent="0.45"
            android:background="@drawable/green_button_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_margin="@dimen/dimen_4"
            android:layout_height="wrap_content"
            android:background="@drawable/cancel_btn_bg"
            android:padding="@dimen/dimen_12"
            app:layout_constraintWidth_percent="0.45"
            android:text="@string/report"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
