<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
<!--    <variable-->
<!--        name="data"-->
<!--        type="com.satafood.core.entities.homepage.CitiesModelItem" />-->

    <variable
        name="Context"
        type="com.example.satadelivery.presentation.map_activity.MapActivity" />
<!--    <variable-->
<!--        name="listener"-->
<!--        type="com.example.satafood.presentaion.ClickHandler"/>-->

</data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recent_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


<View
    android:id="@+id/guid"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
   app:layout_constraintTop_toBottomOf="@+id/recent_location"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sort_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shadow_back_g"
        app:layout_constraintBottom_toTopOf="@+id/ButtonClick"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginRight="@dimen/dimen_16"
            android:background="@drawable/shadowbackground"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:dividerHeight="0.0px"
            android:innerRadius="0dp"
            android:padding="@dimen/dimen_4"
            android:shape="ring"
            app:cardCornerRadius="75dp"
            app:cardElevation="@dimen/dimen_4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:padding="12dp"
                android:scaleType="fitXY"
                android:src="@drawable/test"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/call"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent.normal"
                app:strokeWidth="0dp" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/call"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:scaleType="fitXY"
            android:src="@drawable/telephone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            style="@style/topicTitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginRight="8dp"
            android:text="@string/name"
            app:layout_constraintRight_toLeftOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/address"
            style="@style/grayTopicTitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/address"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/orange_border_shape"
            android:padding="@dimen/dimen_12"
            android:text="@string/details"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintWidth_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ButtonClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_margin="@dimen/dimen_4"
            android:textColor="@color/white"
            android:padding="16dp"
            android:textSize="@dimen/dimen_16"
            android:textAlignment="center"
            app:layout_constraintWidth_percent="0.47"
            android:background="@drawable/green_btn_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_margin="@dimen/dimen_4"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_16"
            android:background="@drawable/cancel_btn_bg"
            android:padding="16dp"
            app:layout_constraintWidth_percent="0.47"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
