<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.codesroots.satavendor.models.delivery.DeliveryItem" />

        <variable
            name="Context"
            type="com.codesroots.satavendor.presentation.map_activity.MapActivity" />

        <variable
            name="listener"
            type="com.codesroots.satavendor.helper.ClickHandler" />

        <variable
            name="pref"
            type="com.codesroots.satavendor.helper.PreferenceHelper" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_profile_title"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/_16sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:fontFamily="@font/kokn"
                android:text="@string/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content" />


            <View
                android:id="@+id/middle_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_10sdp"
                android:layout_marginVertical="16dp"
                android:background="@color/hint_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_profile_title" />


            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/hint_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/middle_line" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/storeNameText"
                style="@style/grayTopicTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:text="@string/name"
                tools:text="@string/name"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/storeNameValue"
                style="@style/blackNormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                tools:text="arabiata"
                android:text="@{data.branches.name}"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storeNameText" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="10dp"

                android:background="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storeNameValue" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mobileText"
                style="@style/grayTopicTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:text="@string/phone"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mobileNumber"
                style="@style/blackNormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:gravity="right"
                android:inputType="phone"
                android:text="@{data.mobile}"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobileText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/editBtn"
                style="@style/blackNormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"

                android:background="@drawable/orange_border_shape"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobileNumber"
                app:layout_constraintWidth_percent="0.5" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>